--- a/parckman/index.html
+++ b/parckman/index.html
@@ -1036,7 +1036,7 @@
 		scene.cameras.main.setBounds(0, 0, mapWidth, mapHeight);
 		
 		scene.time.addEvent({ 
-		  delay: 3000000, 
+		  delay: 3000, 
 		  callback: updateCameraTarget, 
 		  loop: true 
 		});
