--- a/parckman/index.html
+++ b/parckman/index.html
@@ -1008,7 +1008,11 @@
 		  highlightAlpha: { min: 0.3, max: 0.7 },
 		  minTargetDistance: 400,
 		  mapCenter: { x: 800, y: 800 },
-		  spotsPerRow: 6 // Количество мест в одном ряду
+		  spotsPerRow: 6,
+		  parkingPrecision: {
+			positionTolerance: 5,    // Допуск по позиции в пикселях
+			angleTolerance: 0.2      // Допуск по углу в радианах (~5.7°)
+		  }
 		};
 		
 		// Состояние
@@ -1278,7 +1282,7 @@
 		
 		if (!this.recentlyFreedSpots.some(s => s.x === spot.x && s.y === spot.y)) {
 		  this.recentlyFreedSpots.push(spot);
-		  // console.log(`[Система] Место будет освобождено: (${spot.x}, ${spot.y})`);
+		  console.log(`[Система] Место будет освобождено: (${spot.x}, ${spot.y})`);
 		}
 	  }
 
@@ -1287,21 +1291,37 @@
 		  return false;
 		}
 		
-		const scaled = this.scaleCoords(this.currentTarget);
+		const scaledSpot = this.scaleCoords(this.currentTarget);
+		
+		// 1. Проверка расстояния между центрами
 		const distance = Phaser.Math.Distance.Between(
 		  player.x, player.y,
-		  scaled.x, scaled.y
+		  scaledSpot.x, scaledSpot.y
 		);
 		
-		if (distance < this.config.occupiedRadius) {
-		  this.onPlayerParked();
+		// 2. Проверка ориентации (должна быть вертикальная - rotation = 0)
+		const angleDiff = Math.abs(Phaser.Math.Angle.Wrap(player.rotation));
+		const isVertical = angleDiff < this.config.parkingPrecision.angleTolerance;
+		
+		// 3. Проверка точного позиционирования
+		const positionMatch = distance < this.config.parkingPrecision.positionTolerance;
+		
+		if (positionMatch && isVertical) {
+		  this.onPlayerParked(player, scaledSpot);
 		  return true;
 		}
+		
 		return false;
 	  }
 
-	  onPlayerParked() {
-		console.log("[Система] Игрок успешно припарковался!");
+	  onPlayerParked(player, targetSpot) {
+		// Точная фиксация позиции и ориентации
+		player.x = targetSpot.x;
+		player.y = targetSpot.y;
+		player.rotation = 0; // Точная вертикальная ориентация
+		player.setVelocity(0, 0);
+		
+		console.log("[Система] Игрок точно припарковался!");
 		this.isPlayerParked = true;
 		this.highlight.setVisible(false);
 		this.setNewTarget();
@@ -1729,29 +1749,29 @@
 	}	
     
 	function update() {
-	  // Обновление камеры для мобильных устройств
+	  // Для мобильных: плавное перемещение камеры
 	  if (isMobile && cameraTarget && currentTarget) {
 		cameraTarget.x = Phaser.Math.Linear(cameraTarget.x, currentTarget.x, 0.1);
 		cameraTarget.y = Phaser.Math.Linear(cameraTarget.y, currentTarget.y, 0.1);
 	  }
 	  
-	  // Управление игроком
+	  // Управление игроком с учетом требований парковки
 	  if (this.cursors.left.isDown) {
 		this.player.setVelocityX(-100);
-		this.player.rotation = -Math.PI/2;
+		this.player.rotation = 0; // Фиксированная вертикальная ориентация
 	  } 
 	  else if (this.cursors.right.isDown) {
 		this.player.setVelocityX(100);
-		this.player.rotation = Math.PI/2;
+		this.player.rotation = 0; // Фиксированная вертикальная ориентация
 	  } 
 	  else if (this.cursors.up.isDown) {
 		this.player.setVelocityY(-100);
-		this.player.rotation = 0;
+		this.player.rotation = 0; // Строго вертикально
 	  } 
 	  else if (this.cursors.down.isDown) {
 		this.player.setVelocityY(100);
-		this.player.rotation = Math.PI;
-	  } 
+		this.player.rotation = 0; // Строго вертикально
+	  }
 	  else {
 		this.player.setVelocityX(0);
 		this.player.setVelocityY(0);
