--- a/parckman/index.html
+++ b/parckman/index.html
@@ -1462,7 +1462,7 @@
 			scaleCoords(spot.x, spot.y).y,
 			getRandomCarTexture()
 		  )
-		  .setScale(0.47)
+		  .setScale(0.5) // 0.47
 		  .setDepth(5)
 		  .setCollideWorldBounds(false);
 
