--- a/parckman/index.html
+++ b/parckman/index.html
@@ -1888,9 +1888,9 @@
 			
 			updateCameraTarget();
 			
-			scene.input.on('pointerdown', () => {
-				updateCameraTarget();
-			});
+			// scene.input.on('pointerdown', () => {
+			//	updateCameraTarget();
+			// });
 		} else {
 			scene.cameras.main.setBounds(0, 0, mapWidth, mapHeight);
 		}
