--- a/dronoboy/index.html
+++ b/dronoboy/index.html
@@ -173,7 +173,7 @@
                         target.position.sub(center);
 						
 						// Поворот на 180 градусов по Y (Math.PI радиан)
-						target.rotation.y = Math.PI;						
+						target.rotation.y = Math.PI / 2;						
                         
                         // Поворот и масштабирование
                         target.rotation.x = Math.PI / 1;
