--- a/dronoboy/index.html
+++ b/dronoboy/index.html
@@ -176,7 +176,7 @@
 						// target.rotation.y = Math.PI / 2;						
                         
                         // Поворот и масштабирование
-                        // target.rotation.x = Math.PI / 1;
+                        target.rotation.x = Math.PI / 1;
                         target.scale.set(config.targetSize, config.targetSize, config.targetSize);
                         
                         targetGroup.add(target);
