--- a/dronoboy/index.html
+++ b/dronoboy/index.html
@@ -467,7 +467,7 @@
                         const center = box.getCenter(new THREE.Vector3());
                         target.position.sub(center);
                         
-                        target.rotation.y = Math.PI;
+                        // target.rotation.y = Math.PI;
                         target.rotation.x = Math.PI / 18;
                         target.scale.set(config.targetSize, config.targetSize, config.targetSize);
                         
@@ -1094,4 +1094,5 @@
 </body>
 
 </html>
+
 
