--- a/dronoboy/index.html
+++ b/dronoboy/index.html
@@ -648,7 +648,7 @@
                                          config.targetSettings.modelScale.kamikaze / size;
                         kamikaze.scale.set(scaleFactor, scaleFactor, scaleFactor);
                         
-                        kamikaze.rotation.y = Math.PI;
+                        // kamikaze.rotation.y = Math.PI;
                         
                         const initialHeight = Math.random() * 
                             (config.kamikazeSettings.heightRange.max - config.kamikazeSettings.heightRange.min) + 
@@ -1467,4 +1467,5 @@
         window.onload = DronoBoy.init;
     </script>
 </body>
+
 </html>
