--- a/dronoboy/index.html
+++ b/dronoboy/index.html
@@ -221,7 +221,7 @@
 
                 bomberSettings: {
                     modelPath: 'models/bomber.glb',
-                    color: 0x680000,
+                    color: 0xcc0000,
                     bombChance: 0.03,
                     bombIntensity: 1.0,
                     minBombInterval: 1000,
