--- a/dronoboy/index.html
+++ b/dronoboy/index.html
@@ -232,7 +232,7 @@
 
                 kamikazeSettings: {
                     modelPath: 'models/kamikaze.glb',
-                    color: 0xF3F3F3,
+                    color: 0xD98CD9,
                     trackingSpeed: 0.03,
                     attackStartDistance: 25,
                     damage: 30,
